--- a/elements.html
+++ b/elements.html
@@ -23,6 +23,7 @@
 <link rel="import" href="bower_components/paper-tooltip/paper-tooltip.html">
 <link rel="import" href="bower_components/paper-material/paper-material.html">
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="bower_components/paper-spinner/paper-spinner.html">
 
 <link rel="import" href="bower_components/neon-animation/neon-animations.html">
 
