Create polytipe-projects repo if doesn't exist

--- a/screens.html
+++ b/screens.html
@@ -245,6 +245,13 @@
     </iron-pages>
   </template>
 
+  <paper-toast id="created_repo_toast" duration="6000">
+    <div class="layout horizontal center">
+      <iron-icon id="ready_toast_icon" icon="polymer"></iron-icon>
+      <div>Se ha creado el repositorio polytipe-projects en tu Github</div>
+    </div>
+  </paper-toast>
+
   <paper-toast id="ready_toast" duration="2000">
     <div class="layout horizontal center">
       <iron-icon id="ready_toast_icon" icon="check"></iron-icon>
