Add multiple projects for a user

--- a/styles.html
+++ b/styles.html
@@ -253,6 +253,12 @@
   }
 
   /* User view */
+  #user_box{
+    margin-right: 20px;
+  }
+  #avatar{
+    margin-left: 10px;
+  }
   .project_box{
     width: 250px;
     height: 250px;
@@ -299,6 +305,10 @@
     width: 100px;
     text-align: center;
     color: #aaa;
+  }
+  #github_toast_icon{
+    margin-right: 10px;
+    color: #eee;
   }
 
   /*Main frame*/
@@ -419,6 +429,10 @@
       height: auto;
       color: rgb(255, 255, 255);
       display: inline;
+    }
+    /* User view */
+    #user_box{
+      margin-right: 10px;
     }
 	}
 
