Optimize element actions

--- a/default_app.html
+++ b/default_app.html
@@ -37,7 +37,7 @@
       <div id="drawer_content"></div>
     </paper-header-panel>
     <paper-header-panel main mode="seamed">
-    <iron-selector id="app_content" attr-for-selected="screen" selected="{{selected_screen}}">
+    <iron-selector id="app_content" attr-for-selected="id" selected="{{selected_screen}}">
 
     </iron-selector>
     </paper-header-panel>
