--- a/styles.html
+++ b/styles.html
@@ -39,10 +39,6 @@
 
   /*Element defaults*/
 
-  paper-toolbar{
-    background-color: var(--app-primary-color);
-  }
-
   .sidebar_panel paper-toggle-button{
     --paper-toggle-button-checked-bar-color: var(--polytipe-accent-color);
     --paper-toggle-button-checked-button-color: var(--polytipe-accent-color);
@@ -58,11 +54,6 @@
     --paper-fab-keyboard-focus-background: var(--polytipe-accent-color);
   }
 
-  poly-layout{
-    box-sizing: border-box;
-    border: 1px solid #aaa;
-  }
-
   /*Sidebar frame*/
 
   #sidebar_frame{
@@ -71,8 +62,8 @@
   }
 
   .sidebar_polytipe_logo{
-    width: 100%;
-    height: 100%;
+    width: 230px;
+    height: 60px;
     color: rgba(0, 0, 0, 0.15);
   }
 
@@ -184,7 +175,7 @@
   /*Element actions*/
 
   #element_actions{
-    margin-bottom: 15px;
+    display: none;
   }
   .move_button{
     background-color: var(--polytipe-bg-color);
