--- a/styles.html
+++ b/styles.html
@@ -20,6 +20,9 @@
 
   html{
     font-family: "Roboto", 'Helvetica Neue';
+  }
+
+  body.main{
     background-color: var(--polytipe-bg-color);
   }
 
@@ -192,6 +195,37 @@
     margin-left: 10px;
   }
 
+  /*App frame*/
+
+  .main_frame{
+    background-color: var(--polytipe-bg-color);
+  }
+  .screen_view_toolbar{
+    background-color: var(--polytipe-toolbar-color);
+  }
+  .back_icon{
+    margin-right: 20px;
+  }
+  .drawer_toggle{
+    margin: 0;
+  }
+  #app_container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    min-height: 700px;
+  }
+  #app_iframe{
+    width: 360px;
+    height: 640px;
+    background-color: var(--app-bg-color);
+    border: none;
+  }
+  paper-toast{
+    background-color: var(--polytipe-toolbar-color);
+    color: white;
+  }
+
   /* Sign in screen */
 
   #sign_in_screen{
@@ -238,12 +272,9 @@
   #sign_in_bottom paper-fab{
     background-color: var(--polytipe-accent-color);
   }
-  #sign_in_fail_toast_icon{
-    margin-right: 10px;
-    color: var(--paper-amber-700);
-  }
 
   /* User view */
+
   #user_box{
     margin-right: 20px;
   }
@@ -297,48 +328,9 @@
     text-align: center;
     color: #aaa;
   }
-  #github_toast_icon{
-    margin-right: 10px;
-    color: #eee;
-  }
-
-  /*Main frame*/
-
-  .main_frame{
-    background-color: var(--polytipe-bg-color);
-  }
-  .screen_view_toolbar{
-    background-color: var(--polytipe-toolbar-color);
-  }
-  .back_icon{
-    margin-right: 20px;
-  }
-  .drawer_toggle{
-    margin: 0;
-  }
-  #app_container{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    min-height: 700px;
-  }
-  #app_iframe{
-    width: 360px;
-    height: 640px;
-    background-color: var(--app-bg-color);
-    border: none;
-  }
-
-  #ready_toast{
-    background-color: var(--polytipe-toolbar-color);
-    color: white;
-  }
-  #ready_toast_icon{
-    margin-right: 10px;
-    color: var(--polytipe-accent-color);
-  }
 
   /*Screens view*/
+
   .elements_label{
     color: #888;
     margin-bottom: 10px;
@@ -349,15 +341,33 @@
   .elements_group iron-selector{
     flex-wrap: wrap;
   }
-  .screen_placeholder{
+  .screen_box{
     width: 216px;
     height: 384px;
-    margin: 20px;
-    background-color: rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    background-color: var(--app-bg-color);
+    cursor: pointer;
+    padding: 15px;
+    box-sizing: border-box;
   }
-  .screen_placeholder paper-fab{
+  .screen_box paper-fab{
     background-color: var(--polytipe-accent-color);
     @apply(--shadow-none);
+  }
+  .screen_box div{
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    color: rgba(0, 0, 0, 0.7);
+  }
+  .screen_box iron-icon{
+    color: rgba(0, 0, 0, 0.2);
+    width: 50px;
+    height: 50px;
+  }
+  #screen_placeholder{
+    background-color: rgba(0, 0, 0, 0.1);
   }
 
   .add_dialog{
