--- a/styles.html
+++ b/styles.html
@@ -225,6 +225,9 @@
     background-color: var(--polytipe-toolbar-color);
     color: white;
   }
+  paper-material{
+    border-radius: 2px;
+  }
 
   /* Sign in screen */
 
