--- a/elements.html
+++ b/elements.html
@@ -29,7 +29,14 @@
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="bower_components/paper-spinner/paper-spinner.html">
 
+<!-- neon-elements -->
 <link rel="import" href="bower_components/neon-animation/neon-animations.html">
+<link rel="import" href="bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="bower_components/neon-animation/neon-animatable.html">
+
+<!-- carbon-elements -->
+<link rel="import" href="bower_components/carbon-route/carbon-route.html">
+<link rel="import" href="bower_components/carbon-route/carbon-location.html">
 
 <!-- Elements from customelements.io-->
 <link rel="import" href="bower_components/file-tree/file-tree.html">
