--- a/styles.html
+++ b/styles.html
@@ -204,10 +204,11 @@
     background-color: var(--polytipe-toolbar-color);
   }
   .back_icon{
-    margin-right: 20px;
+    margin-right: 24px;
   }
-  .drawer_toggle{
-    margin: 0;
+  .right_drawer_toggle{
+    margin: 0 !important;
+    display: none;
   }
   #app_container{
     position: absolute;
@@ -228,14 +229,18 @@
   paper-material{
     border-radius: 2px;
   }
+  .delete_icon{
+    color: var(--app-accent-color);
+  }
 
-  /* Sign in screen */
-
-  #sign_in_screen{
+  iron-pages section{
     position: absolute;
     width: 100%;
     height: 100%;
   }
+
+  /* Sign in screen */
+  
   #sign_in_left{
     background-color: var(--polytipe-accent-color);
     width: 100%;
@@ -305,9 +310,9 @@
     width: 50px;
     height: 50px;
   }
-  .project_description{
+  .project_name{
+    word-break: break-all;
     text-align: center;
-    margin-top: 15px;
   }
   #new_project_box{
     background-color: rgba(0, 0, 0, 0.1);
@@ -373,21 +378,25 @@
     background-color: rgba(0, 0, 0, 0.1);
   }
 
-  .add_dialog{
+  .modal_dialog{
     width: 300px;
   }
-  .add_dialog paper-input{
-    margin-top: 20px;
+  .modal_dialog paper-input{
+    margin-top: 10px;
     --paper-input-container-focus-color: var(--polytipe-accent-color);
   }
-  .add_dialog .buttons{
+  .modal_dialog .buttons{
     margin-top: 25px;
   }
-  .add_dialog .buttons paper-button:nth-child(1){
+  .modal_dialog .buttons .accept_button{
+    color: var(--polytipe-accent-color);
+    font-weight: 700;
+  }
+  .modal_dialog .buttons .cancel_button{
     color: #777;
   }
-  .add_dialog .buttons paper-button:nth-child(2){
-    color: var(--polytipe-accent-color);
+  .modal_dialog .buttons .red_button{
+    color: var(--app-accent-color);
     font-weight: 700;
   }
 
@@ -440,12 +449,16 @@
     }
 	}
 
-  @media (max-width: 500px) {
+  @media (max-width: 600px) {
     #app_container{
       min-height: 400px;
     }
     #app_iframe{
       transform: scale(0.6);
+    }
+    /* Screen editor */
+    .right_drawer_toggle{
+      display: flex;
     }
   }
 
