--- a/styles.html
+++ b/styles.html
@@ -10,8 +10,8 @@
     --sidebar-bg-color: #1A1A1A;
 
     --app-bg-color: #E5E5E5;
-    --app-primary-color: #03A9F4;
-    --app-accent-color: #F44336;
+    --app-primary-color: var(--paper-light-blue-500);
+    --app-accent-color: var(--paper-red-400);
   }
 
   * {
@@ -99,7 +99,6 @@
 
   .sidebar_list{
     padding: 20px;
-    height: 100%;
   }
 
   #properties_placeholder{
@@ -195,7 +194,7 @@
     margin-left: 10px;
   }
 
-  /*App frame*/
+  /*Screen editor*/
 
   .main_frame{
     background-color: var(--polytipe-bg-color);
@@ -223,7 +222,6 @@
     border: none;
   }
   paper-toast{
-    background-color: var(--polytipe-toolbar-color);
     color: white;
   }
   paper-material{
@@ -238,9 +236,17 @@
     width: 100%;
     height: 100%;
   }
+  .save_button{
+    color: #888;
+  }
+  paper-tooltip{
+    --paper-tooltip:{
+      font-size: 12px;
+    }
+  }
 
   /* Sign in screen */
-  
+
   #sign_in_left{
     background-color: var(--polytipe-accent-color);
     width: 100%;
@@ -282,6 +288,10 @@
   }
 
   /* User view */
+
+  #ready_toast{
+    --paper-toast-background-color: var(--polytipe-accent-color);
+  }
 
   #user_box{
     margin-right: 20px;
@@ -335,6 +345,12 @@
     width: 100px;
     text-align: center;
     color: #aaa;
+  }
+  .toasts paper-toast a{
+    color: var(--polytipe-accent-color);
+  }
+  .toasts paper-toast paper-button{
+    width: 30px;
   }
 
   /*Screens view*/
