--- a/styles.html
+++ b/styles.html
@@ -174,6 +174,10 @@
     text-transform: lowercase;
   }
 
+  paper-icon-button{
+    --paper-icon-button-ink-color: rgba(255, 255, 255, 0.4);
+  }
+
   /*Element actions*/
 
   #element_actions{
