--- a/elements.html
+++ b/elements.html
@@ -4,6 +4,7 @@
 <link rel="import" href="bower_components/iron-iconset-svg/iron-iconset-svg.html">
 <link rel="import" href="bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="bower_components/iron-icons/editor-icons.html">
 <link rel="import" href="bower_components/iron-icons/hardware-icons.html">
 <link rel="import" href="bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
@@ -49,6 +50,7 @@
 <link rel="import" href="bower_components/poly-elements/poly-card.html">
 <link rel="import" href="bower_components/poly-elements/poly-checkbox.html">
 <link rel="import" href="bower_components/poly-elements/poly-fab.html">
+<link rel="import" href="bower_components/poly-elements/poly-label.html">
 <link rel="import" href="bower_components/poly-elements/poly-icon-button.html">
 
 <link rel="import" href="bower_components/poly-layout/poly-layout.html">
